# lib-templater

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  EXAMPLE.md  README.md
.github/workflows/: ci.yml
cmake/: __PROJECT_NAME__Config.cmake.in  install-rules.cmake  mylibConfig.cmake.in
examples/: CMakeLists.txt
include/: foo.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: booststrap.py  bootstrap.py
